fix align

--- a/style.css
+++ b/style.css
@@ -10,3 +10,7 @@
     width: 300%;
     height: 100%;
 }
+
+body{
+    align-items: center;
+}
